<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global strings -->

    <string name="app_name">NXTLive</string>
    <string name="bt_not_supported">Bluetooth недоступен</string>

    <!-- Menu strings -->

    <string name="action_settings">Настройки</string>
    <string name="start_server">Запустить сервер</string>
    <string name="stop_server">Остановить сервер</string>
    <string name="connect">Подключить</string>

    <!-- Settings strings -->

    <string name="settings_camera">Настройки камеры</string>
    <string name="settings_camera_quality">Качество картинки</string>
    <string name="settings_camera_quality_summary">Установите качество картинки от 0 до 100\nЧем выше качество тем медленнее обновление</string>
    <string name="settings_camera_size">Размер</string>
    <string name="settings_camera_size_summary">Установите размер картинки\nЧем больше размер тем медленнее обновление</string>
    <string name="settings_network">Настройки сети</string>
    <string name="settings_network_frontend_port">Порт веб-интерфейса</string>
    <string name="settings_network_video_port">Порт потоковоого видео</string>
    <string name="title_activity_device_list">Устройства Bluetooth</string>
    <string name="hello_world">Hello world!</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Сканируем устройства&#8230;</string>
    <string name="select_device">Выберите устройство для соединения</string>
    <string name="none_paired">Нет соединённых устройств</string>
    <string name="none_found">Устройства не найдены</string>
    <string name="button_scan">Найти устройства</string>
    <string name="connected_devices">Подключенные устройства</string>
    <string name="descovered_devices">Найденные устройства</string>

</resources>